<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/account">
            <menu>
                <item
                    android:id="@+id/menu_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile" />
            </menu>
        </item>
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/menu_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact" />
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_more_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>